--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
-asgiref==3.6.0
+Django==4.1.7
+django-environ==0.10.0
+django-bootstrap5==22.2
+
 black==23.1.0
+djlint==1.19.17
+
+asgiref==3.6.0
 click==8.1.3
 colorama==0.4.6
 cssbeautifier==1.14.7
-Django==4.1.7
-django-environ==0.10.0
-djlint==1.19.17
 EditorConfig==0.12.3
 html-tag-names==0.1.2
 html-void-elements==0.1.0
